# company_ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: IT보안정책.md  복리후생.md  인사규정.md
frontend/: CLAUDE.md  package-lock.json
frontend/app/: page.tsx
frontend/hooks/: useApiKey.ts
src/: CLAUDE.md  config.py  mcp_server.py
src/agent/: __init__.py  graph.py  llm.py  prompt.py  state.py
src/agent/tools/: __init__.py  base.py  doc_search.py
src/api/: auth.py  main.py
src/api/routers/: email.py  qa.py
src/chunker/: __init__.py  token.py
src/ingest/: __init__.py  base.py  confluence.py  local.py  notion.py  onedrive.py  upload.py
src/services/: email.py  qa.py
static/: index.html
static/css/: style.css
static/js/: app.js
